# certified-developer

./: .gitignore  README.md  docker-compose.yml  mlops.code-workspace
.github/: dependabot.yml
.github/workflows/: autopep8.yml  bandit.yml  codeql.yml  codeql2.yml  scorecard.yml
MLOps_Professional/: docker-dev.code-workspace
MLOps_Professional/capstone/app_frontend/: Home.py
MLOps_Professional/capstone/app_frontend/pages/: Monitoring.py  RoboMaintenance.py
MLOps_Professional/capstone/robot_maintenance/: Dockerfile
MLOps_Professional/capstone/robot_maintenance/src/: requirements.txt  serve.py
MLOps_Professional/capstone/setup/: Makefile  README.md
MLOps_Professional/lab1/env/: conda.yml
MLOps_Professional/lab1/sample/: data_model.py  dockerfile  maintenance.py  requirements.txt  serve.py
MLOps_Professional/lab2/: README.md  Untitled Diagram.drawio  fancy_orchards_predictive_maintenance.drawio
MLOps_Professional/lab3/env/: conda.yml
MLOps_Professional/lab3/sample/: data_model.py  generate_data.py  model.joblib  model_scaler.joblib  sensor_data.pkl  serve.py  train.py
MLOps_Professional/lab4/: send_request.py  train_payload.json
MLOps_Professional/lab4/env/: conda.yml
MLOps_Professional/lab4/mlo_lab4/: __init__.py  inference.py  train.py
MLOps_Professional/lab4/sample/: __init__.py  data_model.py  generate_data.py  inference.py  send_request.py  serve.py  train.py  train_payload.json
MLOps_Professional/lab5/: .env  ExperimentRecord.json  pyproject.toml
MLOps_Professional/lab5/data/: ExperimentParameters.json  ExperimentRecord.json
MLOps_Professional/lab5/env/: README.md  conda.yml
MLOps_Professional/lab5/mlo_lab5/: IntelPyTorch_Optimizations.py  __init__.py  main.py
MLOps_Professional/lab5/sample/: IntelPyTorch_Optimizations.py
MLOps_Professional/lab6/env/: conda.yml
MLOps_Professional/lab6/sample/: Falcon_HF_Pipelines.py
MLOps_Professional/lab7/env/: conda.yml
MLOps_Professional/lab7/sample/: data_model.py  generate_data.py  inference.py  serve.py  train.py
MLOps_Professional/lab8/: README.md
MLOps_Professional/lab8/sample/: Dockerfile  PickerBot.py  model.py  requirements.txt  serve.py
MLOps_Professional/lab9/: README.md
MLOps_Professional/lab9/sample/: Part I - Leveraging Intel Optimizations with Hugging Face for Enhanced Model Performance.ipynb  Part II - Uploading and Sharing Models on Hugging Face Hub with Intel Optimizations.ipynb
MLOps_Professional/mlops_capstone/: README.md
MLOps_Professional/mlops_capstone/app_frontend/: Dockerfile  Home.py  requirements.txt
MLOps_Professional/mlops_capstone/app_frontend/pages/: Monitoring.py  RoboMaintenance.py
MLOps_Professional/mlops_capstone/robot_maintenance/: Dockerfile
MLOps_Professional/mlops_capstone/setup/: Makefile  README.md  docker-compose.yaml
MLOps_Professional/workshops/01_model_development_basics/: model_development_basics.ipynb
MLOps_Professional/workshops/02_llm_pipelines/: llm_pipelines.ipynb
labtools/: pyproject.toml
labtools/labtools/: data_model.py  params.py
mlops/: docker-dev.code-workspace
mlops/lab1/: README.md
mlops/lab1/env/: conda.yml
mlops/lab1/sample/: data_model.py  dockerfile  maintenance.py
mlops/lab3/env/: conda.yml
mlops/lab3/sample/: generate_data.py  train.py
mlops/lab4/: pyproject.toml
mlops/lab4/mlo_lab4/: predict_payload.json
mlops/lab5/: .env
mlops/lab5/data/: ExperimentParameters.json
mlops/lab6/: pyproject.toml
mlops/lab6/lab6/: Falcon_HF_Pipelines.py  Gemma_HF_Pipelines.py  __init__.py
mlops/lab7/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mlops/lab7/app/: __init__.py  __main__.py  data_model.py  generate_data.py  inference.py  main.py  train.py
mlops/lab7/env/: conda.yml
mlops/lab7/lab7/: __main__.py  data_model.py  generate_data.py  inference.py  serve.py
mlops/lab7/sample/: data_model.py  serve.py
mlops/lab8/sample/: PickerBot.py
mlops/labtools/: docker-compose.yml
mlops/labtools/.docker/: Dockerfile  docker-compose.yml
mlops/labtools/labtools/: data_model.py
mlops/labtools/python_dev/: Dockerfile
mlops/mlops_capstone/app_frontend/: requirements.txt
mlops/mlops_capstone/app_frontend/pages/: RoboMaintenance.py
mlops/workshops/01_model_development_basics/: model_development_basics.ipynb
python_dev/: Dockerfile
(+43 files in other folders)
