[tool.poetry]
name = "labtools"
version = "0.1.0"
description = "tools developed during the completion of mlops pro labs to enhance the learning experience"
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
