[tool.poetry]
name = "mlo-lab5"
version = "0.1.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
torch = "^2.2.2"
torchvision = "^0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
