[tool.poetry]
name = "mlo-lab5"
version = "0.1.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
torch = "*"
torchvision = "*"
intel-extension-for-pytorch = "*"
oneccl_bind_pt = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "intel-pytorch-extension"
url = "https://pytorch-extension.intel.com/release-whl/stable/cpu/us/"
priority = "supplemental"
