[tool.poetry]
name = "mlo_lab4"
version = "0.1.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = "^2.2.0"
pandas = "^2.0.3"
numpy = "^1.25"
scikit-learn = "^1.3.0"
mlflow = "^2.6.0"
xgboost = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
