[tool.poetry]
name = "lab7"
version = "0.1.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
einops = "*"
safetensors = "*"
pandas = "*"
numpy = "*"
scikit-learn = "*"
mlflow = "*"
xgboost = "*"
daal4py = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
